加入快取
