# doc/openapi.yml
@@ -3,7 +3,7 @@ info:
   title: JobBank1111.Job.WebAPI
   version: '1.0'
 paths:
-  /api/v1/tags:cursor:
+  /api/v2/tags:cursor:
     get:
       tags:
         - Tag
@@ -33,7 +33,7 @@ paths:
             text/plain:
               schema:
                 $ref: '#/components/schemas/Failure'
-  /api/v1/members:cursor:
+  /api/v2/members:cursor:
     get:
       tags:
         - Member
@@ -51,7 +51,7 @@ paths:
             text/json:
               schema:
                 $ref: '#/components/schemas/GetMemberResponseCursorPaginatedList'
-  /api/v1/members:offset:
+  /api/v2/members:offset:
     get:
       tags:
         - Member
@@ -70,25 +70,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/GetMemberResponseCursorPaginatedList'
   /api/v2/members:
-    post:
-      tags:
-        - Member
-      operationId: InsertMember2
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-          text/json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-          application/*+json:
-            schema:
-              $ref: '#/components/schemas/InsertMemberRequest'
-      responses:
-        '200':
-          description: OK
-  /api/v1/members:
     post:
       tags:
         - Member
